# kiizama

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.worker  LICENSE  README.md  SECURITY.md  copier.yml  deployment.md  development.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  fly.backend.toml  fly.frontend.toml  fly.scrape-worker.toml  pyrightconfig.json  release-notes.md  render.yaml
.github/: dependabot.yml  labeler.schema.json  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: generate-client.yml  gitleaks.yml  latest-changes.yml  lint-backend.yml  lint-github-actions.yml  playwright.yml  test-backend.yml  test-docker-compose.yml  test-frontend.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: constants.py  crud_admin.py  crud_users.py  crud_waiting_list.py  main.py  models.py  tests_pre_start.py  utils.py
backend/scripts/: test.sh  tests-start.sh  validate_ig_v2_login.py  validate_ig_v2_persist.py  validate_ig_v2_profiles.py  validate_ig_v2_scrape.py
backend/tests/: conftest.py
frontend/: Dockerfile  Dockerfile.playwright  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
scrape_worker/: __init__.py  backend_client.py  bootstrap.py  config.py  db.py  main.py  mongodb.py  pyproject.toml  redis.py  worker.py
scrape_worker/types/: __init__.py  base.py
scripts/: check-generated-client.sh  test-local.sh  test.sh
(+663 files in other folders)
